v2.0.9/_sources/api/bayesflow.utils.rst

utils
=====


.. automodule:: bayesflow.utils
  :member-order: alphabetical

  
  
  .. rubric:: Modules

  .. autosummary::
    :toctree:
    :template: custom-module-template.rst
    :recursive:
  
    keras_utils
    logging
    numpy_utils
    serialization
    tree

  
  

  
  
  

  
  
  .. rubric:: Functions

  .. autosummary::
    :toctree:
    :template: base.rst
  
    add_metric
    add_titles_and_labels
    batched_call
    calibration_curve
    check_estimates_prior_shapes
    check_lengths_same
    compute_empirical_coverage
    concatenate_valid
    concatenate_valid_shapes
    confusion_matrix
    convert_args
    convert_kwargs
    deserialize_value_or_type
    detailed_loss_callback
    devices
    dim_maybe_nested
    expand
    expand_as
    expand_left
    expand_left_as
    expand_left_to
    expand_right
    expand_right_as
    expand_right_to
    expand_tile
    expand_to
    fill_triangular_matrix
    filter_kwargs
    find_batch_size
    find_distribution
    find_inference_network
    find_memory_budget
    find_network
    find_permutation
    find_pooling
    find_recurrent_net
    find_summary_network
    format_bytes
    format_duration
    integrate
    integrate_stochastic
    jacobian
    jacobian_trace
    jvp
    layer_kwargs
    make_quadratic
    maybe_mask_tensor
    model_kwargs
    optimal_transport
    pad
    parse_bytes
    pickle_load
    positive_diag
    prepare_plot_data
    prettify_subplots
    random_mask
    randomly_mask_along_axis
    searchsorted
    sequential_kwargs
    serialize_value_or_type
    simultaneous_ecdf_bands
    size_of
    slice_maybe_nested
    split_arrays
    split_tensors
    squeeze_inner_estimates_dict
    stack_valid
    tile_axis
    tree_concatenate
    tree_stack
    vjp
    weighted_mean
  
  

  
  
  

  
  
  

 
  
  