v2.0.13/_sources/api/bayesflow.utils.rst

utils
=====


.. automodule:: bayesflow.utils
  :member-order: alphabetical

  
  
  .. rubric:: Modules

  .. autosummary::
    :toctree:
    :template: custom-module-template.rst
    :recursive:
  
    keras_utils
    logging
    numpy_utils
    rng
    serialization
    tree

  
  

  
  
  

  
  
  .. rubric:: Functions

  .. autosummary::
    :toctree:
    :template: base.rst
  
    add_metric
    add_titles_and_labels
    batched_call
    calibration_curve
    call_accepts_kwarg
    check_estimates_prior_shapes
    check_lengths_same
    compute_empirical_coverage
    concatenate_valid
    concatenate_valid_shapes
    confusion_matrix
    convert_args
    convert_kwargs
    deserialize_value_or_type
    detailed_loss_callback
    devices
    dim_maybe_nested
    expand
    expand_as
    expand_left
    expand_left_as
    expand_left_to
    expand_right
    expand_right_as
    expand_right_to
    expand_tile
    expand_to
    feature_mask
    fill_triangular_matrix
    filter_kwargs
    find_batch_size
    find_distribution
    find_inference_network
    find_memory_budget
    find_network
    find_permutation
    find_pooling
    find_recurrent_net
    find_scoring_rule
    find_summary_network
    find_transform
    format_bytes
    format_duration
    integrate
    integrate_stochastic
    jacobian
    jacobian_trace
    jvp
    layer_kwargs
    linsolve_batched
    make_quadratic
    maybe_mask_tensor
    model_kwargs
    next_seed_sequence
    next_uint32
    non_batch_axis
    optimal_transport
    pad
    parse_bytes
    pickle_load
    positive_diag
    prepare_plot_data
    prettify_subplots
    repeat_and_flatten
    reseed_generator
    reseed_random_state
    resolve_seed
    sample_input_masks
    searchsorted
    sequential_kwargs
    serialize_value_or_type
    simultaneous_ecdf_bands
    size_of
    slice_maybe_nested
    split_arrays
    split_tensors
    squeeze_inner_estimates_dict
    stack_valid
    tile_axis
    tree_concatenate
    tree_stack
    vjp
    weighted_mean
  
  

  
  
  .. rubric:: Classes

  .. autosummary::
    :toctree:
    :template: base.rst
  
    MaskName
  
  

  
  
  

 
  
  